# GaN_J_AI

./: .gitignore  Dockerfile  README.md  app.py  openenv.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
agentgrid_env/: __init__.py  client.py
agentgrid_env/server/: Dockerfile  agentgrid_environment.py  app.py  ledger.py  rubrics.py  sim_backend.py  trust_model.py
agentgrid_env/server/tests/: test_ledger.py  test_rubrics.py  test_trust.py
agentgrid_spaces/: __init__.py  random_player.py  record_presets.py  runner.py
agentgrid_spaces/prerecorded/: baseline_seed_123.json  baseline_seed_42.json  baseline_seed_777.json
bridge/: calibration.json  hardware.py  ledger_bridge.py  server.py
demo/: scripted_scenario.json  transcript_projector.py
docs/: AgentGrid_v2.md  Work.md  gradio_implementation_plan.md  implementation.md  problem statements.md  training_guide.md
eval/: baseline_random.py  plot_three_curves.py  plot_trust_correlation.py  replay_demo_scenario.py  verify_ledger_chain.py  verify_trust_model.py
eval/plots/: baseline_rewards.json
firmware/: README.md  nodemcu_agent.ino  uno_agent.ino
spaces/: __init__.py  plots.py  recorder.py  scripted_player.py  transcript.py
spaces/prerecorded/: scripted_demo.json
training/: 01_sft_warmup.ipynb  02_grpo_selfplay.ipynb  03_hitl_finetune.ipynb  Dockerfile  generate_sft_data.py  patch_notebook_paths.py  start_server.sh
